canary-ingress-traffic.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress-with-traffic
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "25"
spec:
  ingressClassName: nginx
  rules:
  - host: my.kubernetes.example
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: canary-v2-service
            port:
              number: 8000
